# slurpy

./: .pre-commit-config.yaml  README.md  pyproject.toml
slurm-in-docker/: Dockerfile  docker-compose.yaml  slurm-node-entrypoint.sh  slurm.conf  slurmdbd.conf
