[tool.poetry]
name = "slurpy"
version = "0.1.0"
description = ""
authors = ["Sandy Rogers <sandyr@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
textual = "^0.83.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
datamodel-code-generator = "^0.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
